[gd_scene load_steps=4 format=3 uid="uid://bxyannii213ea"]

[ext_resource type="Script" uid="uid://dxb8tf1etlbn3" path="res://scenes/player_character/ui.gd" id="1_6iguc"]
[ext_resource type="Shader" uid="uid://dh5qq1oggthq4" path="res://shaders/crosshair.gdshader" id="2_hnm30"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_e5pir"]
shader = ExtResource("2_hnm30")
shader_parameter/shift_x = 0.0
shader_parameter/shift_y = 0.0
shader_parameter/shift_rotate = 0.0
shader_parameter/crosshair_color = Color(1, 1, 1, 1)
shader_parameter/spread = 0.0
shader_parameter/shape_sides = 4.0
shader_parameter/radius_rectangle = 0.14
shader_parameter/rectangle_size_x = 1.3
shader_parameter/rectangle_scale = 3.0

[node name="ui" type="CanvasLayer"]
script = ExtResource("1_6iguc")

[node name="control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="player_health_label" type="Label" parent="control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -89.5
offset_top = -45.0
offset_right = 89.5
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "health : 100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="tower_health_label" type="Label" parent="control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -139.0
offset_right = 139.0
offset_bottom = 45.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "tower health : 1000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ammo_label" type="Label" parent="control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -283.0
offset_top = -45.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "14/300"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="control"]
material = SubResource("ShaderMaterial_e5pir")
layout_mode = 1
anchors_preset = -1
anchor_left = 0.482639
anchor_top = 0.469136
anchor_right = 0.517361
anchor_bottom = 0.530864
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true
